<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/register_name"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/register_as"
            android:inputType="text"
            android:autofillHints="@string/username" />

        <Button
            android:id="@+id/register"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sendNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_layout"
        android:orientation="vertical"
        android:layout_marginTop="50dp">


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:inputType="text"
            android:hint="@string/notification_title" />

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:inputType="text"
            android:hint="@string/notification_body" />

        <Spinner
            android:id="@+id/devices"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/send_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:text="@string/send_notification" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>