<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.MainActivity">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:id="@+id/toolbar"/>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/loginTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/notifyTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notify"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/gpioTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gpio"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/filesTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/files"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/miscTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/misc"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tab" />

</androidx.constraintlayout.widget.ConstraintLayout>
